# EdgeViewerAPP

./: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  FINAL_CHECKLIST.md  OPENCV_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  SUBMISSION.md  build.gradle.kts  create_commits.ps1  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  processor.cpp
app/src/main/java/com/flam/edgeviewer/: CameraController.kt  GLRenderer.kt  MainActivity.kt  NativeProcessor.kt  ThumbnailAdapter.kt  WebSocketStreamer.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  item_thumbnail.xml
app/src/main/res/values/: strings.xml  themes.xml
web/: README.md  package-lock.json  package.json  server.js  tsconfig.json
web/public/: index.html
web/src/: index.ts
